[gd_scene load_steps=2 format=3 uid="uid://psvt6ixn88o4"]

[ext_resource type="Script" path="res://src/vitoria/vitoria.gd" id="1_v1vcj"]

[node name="vitoria" type="Control" node_paths=PackedStringArray("venceu", "pontos_vitoria")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1vcj")
venceu = NodePath("VBoxContainer/venceu")
pontos_vitoria = NodePath("VBoxContainer/pontos_vitoria")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -152.5
offset_right = 246.0
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="venceu" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "VOCÊ VENCEU!"
horizontal_alignment = 1

[node name="pontos_vitoria" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Pontuação: ????"
horizontal_alignment = 1

[node name="VitMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Voltar para o menu"

[connection signal="pressed" from="VBoxContainer/VitMenuButton" to="." method="_on_vit_menu_button_pressed"]
